update http doc

--- a/others/开发实用工具.md
+++ b/others/开发实用工具.md
@@ -3,3 +3,6 @@
 ## 截图工具
 - 截图工具 lightshot
 - 截图为Gif工具`LICEcap` https://www.cockos.com/licecap/
+
+## 在线制作
+- 在线制作表格 https://www.designcap.com/app/?category=chart
