update memory doc

--- a/others/开发实用工具.md
+++ b/others/开发实用工具.md
@@ -5,4 +5,9 @@
 - 截图为Gif工具`LICEcap` https://www.cockos.com/licecap/
 
 ## 在线制作
-- 在线制作表格 https://www.designcap.com/app/?category=chart
+- 在线制作表格 
+  - designcap：https://www.designcap.com/app/?category=chart
+  - canva： https://www.canva.com/
+- 在线制作gif 
+  - https://ezgif.com/crop/ezgif-7-4e2407da4ea3.gif
+  
