add domain name doc

--- a/network/详解域名.md
+++ b/network/详解域名.md
@@ -1,23 +1,50 @@
-# 10分钟带你了解什么是域名
+# 3分钟带你了解什么是域名
+
 ## 什么是域名
-**网域名称**(Domain Name，简称Domain)，简称**域名**。它由一串用`.`分隔的字符组成。代表着互联网上某一台计算机或者计算机组的名称，用于在数据传输时标识计算机的电子方位。
 
-**目的：**域名可以说是一个IP地址的代称，它的目的是便于记忆。这也是域名的一个重要功能——为数字化的互联网资源提供易于记忆的名称。
-**特性：**域名具有唯一性。在资源更改IP地址时，只需要进行新的IP地址和he
+**网域名称**(Domain Name，简称 Domain)，简称**域名**。它由一串用`.`分隔的字符组成。代表着互联网上某一台计算机或者计算机组的名称，用于在数据传输时标识计算机的电子方位。
 
+**目的：**域名可以说是一个 IP 地址的代称，它的目的是便于记忆。这也是域名的一个重要功能——为数字化的互联网资源提供易于记忆的名称。
+**特性：**域名具有唯一性。在资源更改 IP 地址时，只需要进行新的 IP 地址和恒定域名的绑定。就可以实现将资源移动到网络地址拓扑中的不同物理位置。
 
 ## 域名层次
 
-### 顶级域名
-### 子域名
-#### 一级域名
-#### 二级域名
-#### 三级域名
+域名一般由多个部分组成，这些部分通常连在一起，用`.`分割开来。一个域名的层次结构，从右侧到左侧隔一个点依次下降一层。每个标签可以包含 1 到 63 个八位元組。域名的结尾有时候还有一点，这是保留给根节点的，书写时通常省略，在查询时由软件内部补上。
 
+比如说`blog.emonzan.com`域名,分别有以下层次结构：
+
+- `com`:顶级域名
+- `emonzan`:一级域名
+- `blog`:二级域名
+
+注意：域名里的英文字母不区分大小写，因此可以使用大写方法拼写，但一般都以小写形式拼写（有时为了区别 i 和 L，将 L 改为大写）
+
+### 顶级域
+
+顶级域（Top-level domains, 缩写 TLD），也称一级域或者顶级域名。是域名中最高的一级，每个域名都以顶级域结尾。
+
+域名刚被设计出来的时候，顶级域分为两类：
+
+1. 国家和地区顶级域（Country Code Top-level domains, 缩写 ccTLD）。它基于[ISO-3166](https://www.iso.org/iso-3166-country-codes.html)规定的国家/地区双字缩写代码。
+2. 通用顶级域（general Top-level domains, 缩写 gTLD），以下 7 个通用顶级域名早在互联网早期发展阶段就创建了。
+   - .com 商业，目前是全球注册量最大、最通用的域名
+   - .edu 教育机构，现被用于美国各类学校的网站
+   - .org 非营利组织
+   - .net 网络
+   - .int 国际组织
+   - .gov 美国国家和各州政府机构
+   - .mil 美军
+
+现在，为了满足日益增长的互联网需求，在 2021 年，ICANN（Internet Corporation for Assigned Names and Numbers）批准了一项新的 TLD 命名政策，2012 年初开始执行。截止写这篇文章的 2021 年 12 月 9 号，官方列表已经拥有 1590 个顶级域名， 具体可以参考 IANA 的官方网站（https://www.iana.org/domains/root/db）
+
+### 子域名
+子域名将顶级域名左侧的层次结构进一步细分。域名层次结构中，顶级域名下面是二级域名。二级域名下面是三级域名，它位于二级域名的左侧。从右侧到左侧，隔一个点依次下降一层。
 
 ## 域名解析
-域名是为了方便记忆而创建的，要访问一台的服务器的互联网，最终还必须通过IP地址来实现。域名解析就是将域名重新转换为IP地址的过程，域名的解析工作由DNS服务器完成。
-## DNS域名解析过程
+
+域名是为了方便记忆而创建的，要访问一台的服务器的互联网，最终还必须通过 IP 地址来实现。域名解析就是将域名重新转换为 IP 地址的过程，域名的解析工作由 DNS 服务器完成。
+
 
 ## 参考文档
+
 (Domain name)[https://en.wikipedia.org/wiki/Domain_name]
