--- a/others/开发实用工具.md
+++ b/others/开发实用工具.md
@@ -1,13 +1,21 @@
 # 开发实用工具
 
 ## 截图工具
-- 截图工具 lightshot
-- 截图为Gif工具`LICEcap` https://www.cockos.com/licecap/
+1. 截图工具 lightshot
+3. 截图为Gif工具`LICEcap` https://www.cockos.com/licecap/
 
 ## 在线制作
-- 在线制作表格 
+1. 在线制作表格 
   - designcap：https://www.designcap.com/app/?category=chart
   - canva： https://www.canva.com/
-- 在线制作gif 
+2. 在线制作gif 
   - https://ezgif.com/crop/ezgif-7-4e2407da4ea3.gif
   
+
+## UI
+1. 配色选取
+   - https://colorhunt.co/palette/179542
+
+2. 网站主题
+   - https://dashboardpack.com/
+   - https://venom-blog.netlify.app/layouts/index-7.html
