update file structure and add vireport article

--- a/others/开发实用工具.md
+++ b/others/开发实用工具.md
@@ -1,5 +1,6 @@
 # 开发实用工具
-
+## 在线写代码
+1. codesandbox https://codesandbox.io/
 ## 截图工具
 1. 截图工具 lightshot
 3. 截图为Gif工具`LICEcap` https://www.cockos.com/licecap/
@@ -19,3 +20,6 @@
 2. 网站主题
    - https://dashboardpack.com/
    - https://venom-blog.netlify.app/layouts/index-7.html
+
+## 录屏软件
+OBS
