Add js file size doc

--- a/network/详解跨域问题.md
+++ b/network/详解跨域问题.md
@@ -1,3 +1,29 @@
 # 详解跨域问题
 
-CORS ERROR
+## 什么是跨域问题
+跨域问题是指在浏览器对web网页的限制。
+为了安全性考虑, 浏览器有一个协议叫做`浏览器的同源策略(Same-origin policy)`，它用于限制`一个源(origin)`的文档或者它加载的脚本如何能与`另一个源`的资源进行交互。
+
+同源策略要求是`协议`，`域名`，`端口`三个都相同。它能帮助阻隔潜在的恶意文档，减少可能被攻击的次数。像我们平时说的XSS(Cross Site Sctipt)和CSFR(Cross-site request forgery)。同源策略都可以对这些攻击进行有效防御。
+
+当两者进行交互时，如果不满足”同源“这个前提，就会出现跨域问题。具体表现是你在浏览器中打开console会看到一下报错：
+
+
+## 什么时候会出现跨域问题
+我们以https://library.com/index.html 页面举例，假如它要去访问以下URL的资源，会出现不同结果。
+
+| URL | 结果 | 原因 |
+| --- | --- | ---- |
+| `http://library.com/index.html` | 跨域 | 协议不同，http和https是不同的协议 |
+| `https://book.com/index.html` | 跨域 | 域名不同，ibrary和book是不同的域名 |
+| `http://ibrary.com:8080/index.html` | 跨域 | 端口不同,http默认端口是80，这里去访问8080端口的资源，依旧有跨域问题 |
+| `https://math.library.com/index.html` | 跨域 | 子域名不同 |
+| `https://library.com/list.html` | 同源 | 只有页面地址不同，不会有跨域问题 |
+
+## 怎么解决跨域问题
+虽然浏览器这个策略是为了我们安全考虑，但很多情况，我们不可避免地需要访问其他域名的资源。这时候就需要解决跨域问题。下面列出5种解决跨域的问题。
+### 跨域资源共享(CROS)
+
+
+## 参考文档
+(MDN Same-origin policy)[https://developer.mozilla.org/en-US/docs/Web/Security/Same-origin_policy]
