Add sourcetree add account doc

--- a/network/详解域名.md
+++ b/network/详解域名.md
@@ -47,4 +47,4 @@
 
 ## 参考文档
 
-(Domain name)[https://en.wikipedia.org/wiki/Domain_name]
+[Wikipedia Domain name](https://en.wikipedia.org/wiki/Domain_name)
